# SmartResearcher

./: dialectic_generator.py  iterative_researcher.py  main.py  pyproject.toml  research_workflow.py  scientific_formatter.py  synthesis_generator.py  utils.py  web_search_agent.py
